--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,6 @@ services:
       - "3888:3888"
   kafka:
     image: debezium/kafka:1.9
-    links:
-      - "zookeeper:zookeeper"
     depends_on:
       - zookeeper
     ports:
@@ -28,14 +26,23 @@ services:
       - ZOOKEEPER_CONNECT=zookeeper:2181
   connect:
     image: debezium/connect:1.9
-    links:
-      - "kafka:kafka"
     depends_on:
       - kafka
       - mysql
+    ports:
+      - "8083:8083"
     environment:
       - GROUP_ID=1
       - BOOTSTRAP_SERVERS=kafka:9092
       - CONFIG_STORAGE_TOPIC=my_connect_configs
       - OFFSET_STORAGE_TOPIC=my_connect_offsets
       - STATUS_STORAGE_TOPIC=my_connect_statuses
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    depends_on:
+      - kafka
+    ports:
+      - "8080:8080"
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=local
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
